[tool.poetry]
name = "pagerank"
version = "0.1.0"
description = ""
authors = ["itsAnas7 <afahid@diagramd-technologies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
numpy = "^2.1.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
